# agent-isms

./: .gitignore  README.md  README_ZH.md
benchmark/: README.md  all_skills.swebench_lite__all_skills.json  baseline.swe_lite_manual.json  baseline.swebench_lite__baseline.json  benchmark.debugbench.haiku.toml  benchmark.debugbench.toml  benchmark.hle.claude.toml  benchmark.locbench.toml  benchmark.mathvista.seed1.toml  benchmark.mathvista.toml  benchmark.swe.smoke.toml  benchmark.toml  evolutionary_only.swebench_lite__evolutionary_only.json  keynesian_only.swebench_lite__keynesian_only.json  pragmatist_only.swebench_lite__pragmatist_only.json  pyproject.toml
benchmark/reports/: dashboard.html  leaderboard.csv  summary.json  summary.md
benchmark/samples/: aider_polyglot.jsonl  debugbench.jsonl  hle.jsonl  hle.smoke.jsonl  locbench.jsonl  mathvista.jsonl  simpleqa_verified.jsonl  simpleqa_verified.smoke.jsonl  swebench_lite.jsonl  swebench_verified.jsonl  terminal_bench.jsonl
benchmark/skill_bench/: benchmarks.py  cli.py  config.py  report.py  runner.py  utils.py
凯恩斯主义/keynesian-engineer/: SKILL.md
凯恩斯主义/keynesian-engineer/agents/: openai.yaml
凯恩斯主义/keynesian-engineer/references/: keynesian-method.md
实用主义/pragmatist-engineering/: SKILL.md
实用主义/pragmatist-engineering/agents/: openai.yaml
实用主义/pragmatist-engineering/references/: william-james-pragmatism-notes.md
泰勒主义/: SKILL.md
泰勒主义/agents/: openai.yaml
泰勒主义/references/: scenario_playbooks.md  taylor_principles.md
社会达尔文主义-演化/evolutionary-execution/: SKILL.md
马克思/marxist-engineering-method/: SKILL.md
(+15 files in other folders)
