[project]
name = "skill-benchmark"
version = "0.1.0"
description = "Lightweight benchmark harness for evaluating Codex skills."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "datasets>=4.8.4",
  "huggingface-hub>=1.8.0",
  "PyYAML>=6.0",
]

[project.scripts]
skill-bench = "skill_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skill_bench"]
